[gd_scene load_steps=5 format=2]

[ext_resource path="res://Base_Systems/Conformation_Request.gd" type="Script" id=1]
[ext_resource path="res://Base_Systems/Base_Parts/Theme/Game_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Base_Systems/Base_Parts/Theme/Panel_Style_Object.tres" type="StyleBox" id=3]
[ext_resource path="res://Base_Systems/Base_Parts/Game_Button.gd" type="Script" id=4]

[node name="Background_Panel" type="Panel"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 400, 300 )
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_Text" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 215.0
rect_min_size = Vector2( 360, 195 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept_Button" type="Button" parent="."]
margin_left = 45.0
margin_top = 235.0
margin_right = 195.0
margin_bottom = 280.0
text = "Best√§tigen"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abort_Button" type="Button" parent="."]
margin_left = 205.0
margin_top = 235.0
margin_right = 355.0
margin_bottom = 280.0
text = "Abbrechen"
script = ExtResource( 4 )
